--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.3.1",
+    "callcenter2_react_components": "github:microvoz/callcenter2_react_components",
+    "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.2",
     "react-native-md5": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
