--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "socket.io-client": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && DAVIDDDDD=123",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
