--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "callcenter2_react_components": "github:microvoz/callcenter2_react_components",
     "axios": "^0.18.0",
+    "callcenter2_react_components": "github:microvoz/callcenter2_react_components",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-microvoz-icons": "^1.0.4",
     "react-native-md5": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-act": "^1.7.4",
     "redux-devtools-extension": "^2.13.2",
