--- a/api_dummy/package.json
+++ b/api_dummy/package.json
@@ -11,8 +11,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "http-proxy-middleware": "^0.18.0",
     "node-json-db": "^0.7.5",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {},
   "description": ""
