--- a/api_dummy/package.json
+++ b/api_dummy/package.json
@@ -14,6 +14,7 @@
     "http-proxy-middleware": "^0.18.0",
     "node-json-db": "^0.7.5",
     "nodemon": "^1.17.5",
+    "uuid": "^3.2.1",
     "vhost": "^3.0.2"
   },
   "devDependencies": {},
