--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "react": "^16.3.2",
+    "callcenter2_react_components": "github:microvoz/callcenter2_react_components",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-microvoz-icons": "^1.0.4",
@@ -21,7 +22,7 @@
     "socket.io-client": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start && DAVIDDDDD=123",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
