--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "proxy": "http://localhost:8080/",
   "dependencies": {
     "axios": "^0.18.0",
-    "callcenter2_react_components": "file:../../callcenter2_react_components",
+    "callcenter2_react_components": "git+ssh://git@github.com:microvoz/callcenter2_react_components.git",
     "classnames": "^2.2.5",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
