--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "callcenter2_react_components": "git+ssh://git@github.com:microvoz/callcenter2_react_components.git",
     "classnames": "^2.2.5",
+    "css-loader": "^0.28.11",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
