--- a/docker/config/default.conf
+++ b/docker/config/default.conf
@@ -1,5 +1,5 @@
 upstream web_api {
-    #ip_hash;
+    ip_hash;
     server webapi;
 }
 upstream web_socket {
@@ -23,13 +23,21 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /websocket {
-        proxy_pass http://web_socket;
+    location /sockjs-node {
+        proxy_pass http://web_app;
+        #proxy_pass http://web_socket;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
 
+    location /socket.io {
+        proxy_pass http://web_socket;
+        #proxy_pass http://web_socket;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
     location / {
         proxy_pass http://web_app;
         proxy_set_header Host $host;
